# AlgorithmExersizes

./: CMakeLists.txt  README.md  token
bench/: CMakeLists.txt
bench/graph/: CMakeLists.txt  graph_bench_suite.cpp
cmake/: ExternalGBench.cmake.in
codility/: digit_gap.hpp
data_structure/list/: double_linked_list.hpp  double_linked_list_sentinel.hpp  double_lonked_xor_ptr.hpp  linked_list.hpp  operations.hpp
data_structure/tree/: binary_tree.hpp  rb_tree.hpp
graphs/: CMakeLists.txt  adjacency_graph.hpp  adjacency_short_path_graph.hpp  adjacency_timed_graph.hpp  ext.hpp  graph_node.hpp  main.cpp  node.hpp
heap/: heap_operations.hpp  heap_properties.hpp  priority_queue.hpp
heap/young_tableau/: young_tableau.hpp
lc/: trapping_water.hpp
matrix/: matrix.hpp  maxtrix_mult.hpp
max_subarray/: find_max_subarray.hpp
others/: topk.hpp
sort/linear_complexity/: counting_sort.hpp  radix_sort.hpp
sort/mergesort/: merge_sort.hpp
sort/quicksort/: quicksort.hpp
test/: CMakeLists.txt
test/codility/: CMakeLists.txt  test.cpp
test/data_structure/: CMakeLists.txt
test/data_structure/list/: linked_list_suite.cpp
test/data_structure/tree/: CMakeLists.txt  rb_tree_suite.cpp  tree_suite.cpp
test/graph/: CMakeLists.txt  graph_naive_suite.cpp  graph_short_path_suite.cpp  graph_simple_suite.cpp  graph_timed_suite.cpp
test/heap/: heap_suite.cpp  young_tableau_suite.cpp
test/lc/: CMakeLists.txt  trap_water.cpp
test/matrix/: CMakeLists.txt  matrix_suite.cpp
test/max_subarray/: max_subarray_suite.cpp
test/others/: CMakeLists.txt  topk_suite.cpp
test/sort/: CMakeLists.txt
test/sort/linear_complexity/: counting_sort.cpp  radix_sort.cpp  tracer_impl.hpp
test/sort/mergesort/: merge_sort.cpp
test/sort/quicksort/: CMakeLists.txt  quicksort_suite.cpp
utils/: printer.hpp  tracer.hpp
